<?xml version="1.0"?>
<package format="2">
  <name>rv_manipulation_commander</name>
  <version>0.1.0</version>
  <description>The rv_manipulation_commander package</description>

  <maintainer email="g.suddrey@qut.edu.au">Gavin Suddrey</maintainer>
  <license>BSD</license>

  <url type="website">http://robotics.qut.edu.au</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>moveit_commander</exec_depend>
  
  <export>
  </export>
</package>
